# introtodeeplearning

./: .gitignore  pyproject.toml  setup.py
lab1/: PT_Part1_Intro.ipynb
mitdeeplearning/: lab1.py  lab2.py  util.py
