[project]
name = "introtodeeplearning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comet-ml>=3.53.0",
    "h5py>=3.14.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "introtodeeplearning @ file:///${PROJECT_ROOT}",
]
